[tool.poetry]
name = "dependency-locking-analyzer"
version = "0.1.0"
description = "A Python project for testing dependency locking analysis"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
# Pinned dependencies (exact versions)
django = "4.2.7"
sqlalchemy = "2.0.23"
pandas = "2.1.3"
simplejson = "3.19.2"
python-dateutil = "2.8.2"
pydantic = "2.5.0"
fastapi = "0.104.1"

# Range dependencies (not fully pinned)
requests = "^2.28.0"
jinja2 = "^3.1.0"
click = "^8.0.0"

# Flexible dependencies (compatible release)
python-decouple = "~3.8"
redis = ">=4.0.0,<5.0.0"

# Unpinned dependencies (latest)
pytest = "*"
httpx = "*"
structlog = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
pre-commit = "^3.4.0"

[tool.poetry.group.test.dependencies]
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.0"
coverage = "^7.3.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.1.0"
sphinx-rtd-theme = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"
